--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Tit A. Poplatnik <33201077+tpltnk@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --open",
+    "dev": "webpack-dev-server --mode development --open --",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development"
   },
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
+    "@webpack-cli/serve": "^1.6.1",
     "autoprefixer": "^10.4.4",
     "copy-webpack-plugin": "^6.2.0",
     "css-loader": "^6.7.1",
