--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Tit A. Poplatnik <33201077+tpltnk@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --open",
-    "run": "webpack-dev-server --mode production",
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development"
+    "dev": "webpack-dev-server --mode=development --open",
+    "prod": "webpack-dev-server --mode=production",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development"
   },
   "dependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
