prep for publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "me",
   "version": "1.0.0",
   "main": "bootstrap.js",
   "author": "Tit A. Poplatnik <33201077+tpltnk@users.noreply.github.com>",
