--- a/docker/Dockerfile.production
+++ b/docker/Dockerfile.production
@@ -1,22 +1,76 @@
 FROM rust:latest
 
-RUN apt-get install -y curl
-
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-
-RUN apt-get update
-RUN apt install -y --no-install-recommends software-properties-common
-RUN apt-get install -y --no-install-recommends cmake libstdc++-10-dev libxxhash-dev yarn git make zlib1g-dev ca-certificates pkg-config
-RUN apt-get clean
-RUN rm -rf /var/lib/apt/lists/*
-
 # RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster main\n" >> /etc/apt/sources.list
 # RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster main\n" >> /etc/apt/sources.list
 # RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-12 main\n" >> /etc/apt/sources.list
 # RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-12 main\n" >> /etc/apt/sources.list
 # RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main\n" >> /etc/apt/sources.list
 # RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main\n" >> /etc/apt/sources.list
+
+# RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
+
+# RUN apt-get update
+# RUN apt-get install -y --no-install-recommends \
+#                        curl \
+#                        build-essentials \
+#                        libstdc++-8-dev \
+#                        libgcc-8-dev \
+#                        libobjc-8-dev \ \
+#                        software-properties-common \
+#                        cmake \
+#                        libclang-common-15-dev \
+#                        clang \
+#                        libclang-cpp15 \
+#                        libxxhash-dev \
+#                        yarn \
+#                        git \
+#                        make \
+#                        zlib1g-dev \
+#                        npm
+
+# RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+# RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+
+RUN apt-get update
+
+# This batch of commands installs llvm.sh dependencies.
+RUN apt-get install -y --no-install-recommends lsb-release
+RUN apt-get install -y --no-install-recommends software-properties-common
+RUN wget https://apt.llvm.org/llvm.sh
+RUN chmod +x llvm.sh
+RUN ./llvm.sh 13 all
+
+
+# RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main" > /etc/apt/sources.list
+# RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main" > /etc/apt/sources.list
+
+# RUN apt-get update
+
+
+# Add apt.llvm.org repository and install clang
+# RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
+# RUN echo "deb http://apt.llvm.org/stretch/ llvm-toolchain-stretch main" > /etc/apt/sources.list
+# RUN apt-get update
+# RUN apt-get install -y clang clang-format clang-tidy lldb libc++-8-dev libc++abi-8-dev
+
+# RUN clang --version
+# RUN clang++ --version
+
+RUN update-alternatives --install /usr/bin/cc cc /usr/bin/clang-13 100
+RUN update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-13 100
+RUN update-alternatives --install /usr/bin/cpp cpp /usr/bin/clang++-13 100
+
+# RUN clang --version
+# RUN clang++ --version
+
+RUN apt-get install -y --no-install-recommends npm git make zlib1g-dev cmake
+
+RUN apt-get clean
+RUN rm -rf /var/lib/apt/lists/*
+
+RUN npm -g install yarn
+
+
 
 # RUN apt-get install -y wget make tar
 
@@ -59,8 +113,8 @@ RUN rm -rf /var/lib/apt/lists/*
 # RUN ln -s /usr/bin/clang-13 /usr/bin/clang
 # RUN ln -s /usr/bin/clang++-13 /usr/bin/clang++
 
-# RUN export CMAKE_C_COMPILER=clang-13
-# RUN export CMAKE_CXX_COMPILER=clang++-13
+RUN export CMAKE_C_COMPILER=clang-13
+RUN export CMAKE_CXX_COMPILER=clang++-13
 
 ENV MOLD_REPO="https://github.com/rui314/mold"
 
