--- a/docker/Dockerfile.production
+++ b/docker/Dockerfile.production
@@ -1,36 +1,5 @@
 FROM rust:latest
 
-# RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster main\n" >> /etc/apt/sources.list
-# RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster main\n" >> /etc/apt/sources.list
-# RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-12 main\n" >> /etc/apt/sources.list
-# RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-12 main\n" >> /etc/apt/sources.list
-# RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main\n" >> /etc/apt/sources.list
-# RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main\n" >> /etc/apt/sources.list
-
-# RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
-
-# RUN apt-get update
-# RUN apt-get install -y --no-install-recommends \
-#                        curl \
-#                        build-essentials \
-#                        libstdc++-8-dev \
-#                        libgcc-8-dev \
-#                        libobjc-8-dev \ \
-#                        software-properties-common \
-#                        cmake \
-#                        libclang-common-15-dev \
-#                        clang \
-#                        libclang-cpp15 \
-#                        libxxhash-dev \
-#                        yarn \
-#                        git \
-#                        make \
-#                        zlib1g-dev \
-#                        npm
-
-# RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-# RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-
 RUN apt-get update
 
 # This batch of commands installs llvm.sh dependencies.
@@ -39,26 +8,9 @@ RUN wget https://apt.llvm.org/llvm.sh
 RUN chmod +x llvm.sh
 RUN ./llvm.sh 13 all
 
-# RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main" > /etc/apt/sources.list
-# RUN echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-13 main" > /etc/apt/sources.list
-
-# RUN apt-get update
-
-# Add apt.llvm.org repository and install clang
-# RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
-# RUN echo "deb http://apt.llvm.org/stretch/ llvm-toolchain-stretch main" > /etc/apt/sources.list
-# RUN apt-get update
-# RUN apt-get install -y clang clang-format clang-tidy lldb libc++-8-dev libc++abi-8-dev
-
-# RUN clang --version
-# RUN clang++ --version
-
 RUN update-alternatives --install /usr/bin/cc cc /usr/bin/clang-13 100
 RUN update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-13 100
 RUN update-alternatives --install /usr/bin/cpp cpp /usr/bin/clang++-13 100
-
-# RUN clang --version
-# RUN clang++ --version
 
 RUN apt-get install -y --no-install-recommends npm git make zlib1g-dev cmake
 
@@ -67,58 +19,18 @@ RUN rm -rf /var/lib/apt/lists/*
 
 RUN npm -g install yarn
 
-# RUN apt-get install -y wget make tar
-
-# RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
-
-# TODO: Make optional installation of cmake from source rather than via apt-get
-# ENV CMAKE_ARCHIVE="https://github.com/Kitware/CMake/releases/download/v3.23.1/cmake-3.23.1.tar.gz"
-# ENV CMAKE_ARCHIVE_EXTRACTION_DIR="cmake"
-# ENV CMAKE_ARCHIVE_DIR="cmake-3.23.1"
-
-# RUN wget $CMAKE_ARCHIVE
-# RUN mkdir -p $CMAKE_ARCHIVE_EXTRACTION_DIR
-# RUN tar -xf $(basename $CMAKE_ARCHIVE) -C $CMAKE_ARCHIVE_EXTRACTION_DIR
-
-# RUN cd $CMAKE_ARCHIVE_EXTRACTION_DIR \
-#     && cd $CMAKE_ARCHIVE_DIR \
-#     && chmod +x ./bootstrap \
-#     && ./bootstrap -- -D CMAKE_BUILD_TYPE:STRING=Release \
-#     && make \
-#     && make install
-
-# RUN cat /etc/apt/sources.list
-
-# RUN apt-get update
-# RUN apt-get upgrade -y
-# RUN apt-get install -y \
-#       ca-certificates \
-#       git \
-#       clang-13 \
-#       clang++-13 \
-#       zlib1g-dev \
-#       libssl-dev \
-#       pkg-config \
-#       llvm \
-#    && apt-get clean \
-#    && rm -rf /var/lib/apt/lists/*
-
-# RUN update-alternatives --install /usr/bin/cc cc /usr/bin/clang-13 100
-# RUN update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang-13 100
-# RUN ln -s /usr/bin/clang-13 /usr/bin/clang
-# RUN ln -s /usr/bin/clang++-13 /usr/bin/clang++
-
 RUN export CMAKE_C_COMPILER=clang-13
 RUN export CMAKE_CXX_COMPILER=clang++-13
 
 ENV MOLD_REPO="https://github.com/rui314/mold"
 
-# MOLD_CXXFLAGS=-std=c++2a
-# MOLD_CXXFLAGS=-stdlib=libstdc++ with g++
 RUN git clone $MOLD_REPO
 RUN cd $(basename $MOLD_REPO) \
     && make -j$(nproc) \
     && make install
+
+RUN ls /usr/bin | grep mold || exit 0
+RUN ls /usr/local/bin | grep mold || exit 0
 
 WORKDIR /opt
 
