--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ crate-type = ["rlib", "cdylib"]
 yew = "^0.19"
 wasm-bindgen = "^0.2"
 wee_alloc = "^0.4.4"
+
+[profile.dev]
+opt-level = "z"
+# lto is "thin-local" by def
+
+[profile.release]
+opt-level = "z"
+lto = "thin"
