--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "author": "Tit A. Poplatnik <33201077+tpltnk@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open",
-    "prod": "webpack-dev-server --mode=production",
-    "development": "webpack-dev-server --mode=development --open",
-    "production": "webpack-dev-server --mode=production",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development"
+    "development": "webpack-dev-server --open --config=webpack.development.config.js",
+    "production": "webpack --config=webpack.production.config.js",
+    "serve": "http-server dist"
   },
   "dependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
@@ -18,6 +15,7 @@
     "autoprefixer": "^10.4.4",
     "copy-webpack-plugin": "^6.2.0",
     "css-loader": "^6.7.1",
+    "http-server": "^14.1.0",
     "postcss": "^8.4.12",
     "postcss-import": "^14.1.0",
     "postcss-loader": "^6.2.1",
@@ -26,8 +24,7 @@
     "tailwindcss": "^3.0.24",
     "wasm-pack": "^0.9.1",
     "webpack": "5",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
@@ -44,6 +41,7 @@
     "wasm-pack": "^0.9.1",
     "webpack": "5",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.8.0"
   }
 }
